
2014-11-28
- bdos/fs.h bdos/fsdir.c bdos/proc.c: Fix regression caused by fsdir.c
  update of 2014-03-03: a DND pointed to by the DTA could be reused while
  still in use. (RFB)

2014-11-29
- aes/gemfslib.c: Fix loop in file selector when initial path did not start
  with drive or backslash. (RFB)
- aes/gemfslib.c: Preserve filemask in file selector when changing drives. (RFB)

2014-12-01
- aes/gem.def aes/gem.rsc aes/gemfslib.c: Several cosmetic improvements to
  the file selector. Suggested by Eero Tamminen. (RFB)
- aes/gemfslib.c: EmuTOS's file selector now behaves like Atari TOS's when
  the file mask is updated manually. Suggested by Eero Tamminen. (RFB)

2014-12-03
- bdos/fsopnclo.c: Fix potential bug: memcpy() length was wrong. (RFB)

2014-12-04
- aes/gempd.c aes/optimize.c aes/optimize.h: Eliminate unnecessary global
  function. (RFB)
- aes/gemfmalt.c aes/gemgrlib.c aes/gemqueue.c aes/gemwmlib.c aes/optimize.c
  aes/optimize.h aes/rectfunc.c aes/rectfunc.h desk/deskact.c desk/desksupp.c:
  Code cleanup: Collect rc_xxx() functions in one module. (RFB)

2014-12-06
- aes/machine.c: The _FDC cookie on machines without DIP switches was
  initialised incorrectly. (RFB)

2014-12-11
- bios/floppy.c: Increase delay for FDC register access to comply with
  real hardware. (RFB)

2014-12-13
- bios/floppy.c: Rewrote the floppy drive motor turn-off code and increased
  the timeout slightly. (RFB)
- bios/floppy.c: Clean up whitespace, including comments. (RFB)

2014-12-14
- bios/floppy.c: Fix minor issues in Flopver(). (RFB)
- bios/floppy.c: Fix bug in Flopfmt() on Falcon that was triggered by
  compiling with optimisation level -O2. (RFB)
- bios/floppy.c: General tidy up of Flopfmt() code. (RFB)
- bios/floppy.c: General tidy up of floprw(), flopwtrack(). (RFB)

2014-12-15
- bios/floppy.c: Small refactoring for future changes (smaller code too). (RFB)
- bios/floppy.c: General tidy up of remainder of module. (RFB)